# Open_Opengles

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chyang/open_opengles/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chyang/open_opengles/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chyang/open_opengles/: ExampleUnitTest.java
hello_triangle/: CMakeLists.txt  build.gradle
hello_triangle/src/androidTest/java/com/chyang/hello_triangle/: ExampleInstrumentedTest.java
hello_triangle/src/main/: AndroidManifest.xml
hello_triangle/src/main/cpp/: HelloTriangleRenderer.cpp  esUtil.c  esUtil_Android.c
hello_triangle/src/main/cpp/include/: HelloTriangleRandeer.h
hello_triangle/src/main/java/com/chyang/hello_triangle/: HelloTriangleRanderer.java  HelloTriangleRenderer.java  MainActivity.java
hello_triangle/src/main/res/layout/: activity_main.xml
hello_triangle/src/test/java/com/chyang/hello_triangle/: ExampleUnitTest.java
